fix sonarlint and deprecated code